# flow

./: .gitignore  README.md  pyproject.toml
src/flow/: __init__.py  __main__.py  auth.py  cli.py  config.py
src/flow/commands/: auth.py  config.py  context.py  generate.py  jira.py  review.py  scaffold.py
src/flow/context/: __init__.py  collector.py  indexer.py
src/flow/integrations/: __init__.py  jira_client.py
src/flow/providers/: __init__.py  anthropic.py  base.py  ollama.py
src/flow/utils/: __init__.py  files.py
tests/: __init__.py  test_auth.py  test_cli.py  test_config.py  test_context.py  test_jira.py  test_providers.py  test_scaffold.py  test_utils.py
