[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flow-cli"
version = "0.1.0"
description = "A vibe coding CLI tool with AI-powered code generation, review, and scaffolding"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Vincent" }
]
keywords = ["cli", "ai", "code-generation", "vibe-coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer[all]>=0.9.0",
    "anthropic>=0.18.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
    "pathspec>=0.12.0",
    "jira>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
flow = "flow.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
